--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2026968/3920258435.py:243: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_2031767/805514885.py:244: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  torch.tensor(pred[iterIdx, 0 : adjustedLens[iterIdx], :]),\n"
      ]
     },
@@ -151,131 +151,146 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CER DAY:  0.3276394518432735\n",
+      "CER DAY:  0.32175255742134723\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.3778190255220418\n",
+      "CER DAY:  0.36519721577726216\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.5078225185945114\n",
+      "CER DAY:  0.48670599298965544\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.5294661855860857\n",
+      "CER DAY:  0.5025441761495051\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.5657821488216738\n",
+      "CER DAY:  0.5369270736685842\n",
       "Running model: neurips_transformer_time_masked_held_out_days_2_seed_1\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.3248407643312102\n",
+      "CER DAY:  0.3199189345686161\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.3630626450116009\n",
+      "CER DAY:  0.35081206496519723\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.5055997264255792\n",
+      "CER DAY:  0.47755834829443444\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.5239152558053474\n",
+      "CER DAY:  0.49791840133222315\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.5570606791612545\n",
+      "CER DAY:  0.5244943403228799\n",
       "Running model: neurips_transformer_time_masked_held_out_days_2_seed_2\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.3167342211928199\n",
+      "CER DAY:  0.314997104806022\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.3619489559164733\n",
+      "CER DAY:  0.3465429234338747\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.49816192186030606\n",
+      "CER DAY:  0.4776438403009319\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.5238227403090018\n",
+      "CER DAY:  0.4980109168285688\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.5595657821488217\n",
+      "CER DAY:  0.5324735572462423\n",
       "Running model: neurips_transformer_time_masked_held_out_days_2_seed_3\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.3193398957730168\n",
+      "CER DAY:  0.3117158849642926\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.3638979118329466\n",
+      "CER DAY:  0.34784222737819026\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.49157903736000685\n",
+      "CER DAY:  0.46652987945627084\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.5275233601628273\n",
+      "CER DAY:  0.49893607179202515\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.5526999443310447\n",
+      "CER DAY:  0.526071627389126\n",
       "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n",
-      "Model performance:  0.4527480200657834\n",
+      "Model performance:  0.431781848918616\n",
       "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.18898376653842544\n",
+      "CER DAY:  0.18795158112039034\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.2017051362029528\n",
+      "CER DAY:  0.20108130588479933\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.2677851118445178\n",
+      "CER DAY:  0.2665016501650165\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.3272889417360285\n",
+      "CER DAY:  0.30737217598097505\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.3680970957954053\n",
+      "CER DAY:  0.3449501517121803\n",
       "Running model: neurips_transformer_time_masked_held_out_days_1_seed_1\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.20052547621281785\n",
+      "CER DAY:  0.20165149666885615\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.2052401746724891\n",
+      "CER DAY:  0.20638386358910377\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.2773193986065273\n",
+      "CER DAY:  0.2767693436010268\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.3229290527150218\n",
+      "CER DAY:  0.31173206500198175\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.3706111833550065\n",
+      "CER DAY:  0.3496315561335067\n",
       "Running model: neurips_transformer_time_masked_held_out_days_1_seed_2\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.20343436239091678\n",
+      "CER DAY:  0.20427887773294548\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.198378041172801\n",
+      "CER DAY:  0.20108130588479933\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.2753025302530253\n",
+      "CER DAY:  0.2710854418775211\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.3237217598097503\n",
+      "CER DAY:  0.3087594133967499\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.3620286085825748\n",
+      "CER DAY:  0.3376679670567837\n",
       "Running model: neurips_transformer_time_masked_held_out_days_1_seed_3\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.19114197241249883\n",
+      "CER DAY:  0.1903912921084733\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.1889166146808068\n",
+      "CER DAY:  0.19006030359742151\n",
       "VAL DAY 2\n",
-      "CER DAY:  0.2654015401540154\n",
+      "CER DAY:  0.26026769343601025\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.308858501783591\n",
+      "CER DAY:  0.29607609988109396\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.36176853055916774\n",
+      "CER DAY:  0.3315127871694842\n",
       "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_1\n",
-      "Model performance:  0.26583980306760085\n",
+      "Model performance:  0.25578488922552545\n",
       "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
       "MOD VAL\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.19400276529554097\n",
+      "CER DAY:  0.19365710335292086\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.20971638185559632\n",
+      "CER DAY:  0.20452715397691687\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.20795660036166366\n",
+      "CER DAY:  0.20218720399552226\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.2494483555742356\n",
+      "CER DAY:  0.23915099295996636\n",
       "VAL DAY 5\n",
-      "CER DAY:  0.24493992856369737\n",
+      "CER DAY:  0.24136811343218964\n",
       "Running model: neurips_transformer_time_masked_held_out_days_seed_1\n",
       "MOD VAL\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.20463187003110958\n",
+      "CER DAY:  0.20428620808848946\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.21302675136440904\n",
+      "CER DAY:  0.21105842354835824\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.21493154223714803\n",
+      "CER DAY:  0.2107121329544476\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.247557003257329\n",
+      "CER DAY:  0.2408321950194389\n",
       "VAL DAY 5\n",
-      "CER DAY:  0.2490529278060396\n",
+      "CER DAY:  0.24125987661002274\n",
       "Running model: neurips_transformer_time_masked_held_out_days_seed_2\n",
       "MOD VAL\n",
       "VAL DAY 0\n",
-      "CER DAY:  0.18829934324230901\n",
+      "CER DAY:  0.18683027998617352\n",
       "VAL DAY 1\n",
-      "CER DAY:  0.20345352062270736\n",
+      "CER DAY:  0.19960633443678982\n",
       "VAL DAY 3\n",
-      "CER DAY:  0.2106260225609231\n",
+      "CER DAY:  0.20390941186601222\n",
       "VAL DAY 4\n",
-      "CER DAY:  0.23999159398970263\n",
-      "VAL DAY 5\n"
+      "CER DAY:  0.22885363034569717\n",
+      "VAL DAY 5\n",
+      "CER DAY:  0.24277519212035933\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_seed_3\n",
+      "MOD VAL\n",
+      "VAL DAY 0\n",
+      "CER DAY:  0.18328724507431732\n",
+      "VAL DAY 1\n",
+      "CER DAY:  0.1985327010825803\n",
+      "VAL DAY 3\n",
+      "CER DAY:  0.19908722982864033\n",
+      "VAL DAY 4\n",
+      "CER DAY:  0.23463276242513398\n",
+      "VAL DAY 5\n",
+      "CER DAY:  0.23768806147851498\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days\n",
+      "Model performance:  0.20861101698106102\n"
      ]
     }
    ],
@@ -307,16 +322,17 @@
     "memo = True\n",
     "run_lm = False\n",
     "memo_epochs = 1\n",
-    "memo_augs = 0\n",
+    "memo_augs = 16\n",
+    "nptl_augs = 0\n",
     "memo_lr = [3e-5, 6e-5, 6e-5]\n",
     "\n",
-    "max_mask_pct = 0\n",
-    "num_masks = 0\n",
+    "max_mask_pct = 0.05\n",
+    "num_masks = 20\n",
     "\n",
     "day_edit_distance = 0\n",
     "day_seq_length = 0\n",
     "evaluate_comp = False\n",
-    "val_save_file = 'per_tent_remove_blank'\n",
+    "val_save_file = 'per_combined'\n",
     "\n",
     "saveFolder_data = \"/data/willett_data/paper_results_obi/\"\n",
     "saveFolder_transcripts = \"/data/willett_data/model_transcriptions_comp/\"\n",
@@ -487,7 +503,7 @@
     "                    \n",
     "                    for _ in range(memo_epochs):\n",
     "                        \n",
-    "                        logits_aug = model.forward(X, X_len, ve, memo_augs)  # [memo_augs, T, D]\n",
+    "                        logits_aug = model.forward(X, X_len, ve, memo_augs, nptl_augs)  # [memo_augs, T, D]\n",
     "                        probs_aug = torch.nn.functional.softmax(logits_aug, dim=-1)          # [memo_augs, T, D]\n",
     "                        marginal_probs = probs_aug.mean(dim=0)                               # [T, D]\n",
     "                        \n",
@@ -582,10 +598,6 @@
     "\n",
     "                            adjustedLens = model.compute_length(X_len)\n",
     "                            marginal_probs = marginal_probs[:adjustedLens]\n",
-    "                            \n",
-    "                            # filter out blank tokens\n",
-    "                            #max_indices = marginal_probs.argmax(dim=1)\n",
-    "                            #marginal_probs = marginal_probs[max_indices != 0]\n",
     "                            \n",
     "                            loss = - (marginal_probs * marginal_probs.log()).sum(dim=-1).mean()\n",
     "\n",
