--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -67,36 +67,18 @@
     "    model_storage_path = '/data/willett_data/outputs/'\n",
     "elif output_file == 'leia':\n",
     "    model_storage_path = '/data/willett_data/leia_outputs/'\n",
-    "    \n",
-    "load_lm = True"
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RUNNING IN N-GRAM MODE\n",
-      "loaded LM\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0530 09:13:31.343159 2338856 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0530 09:16:01.934877 2338856 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
+    "load_lm = True\n",
     "\n",
     "# LM decoding hyperparameters\n",
     "acoustic_scale = 0.8\n",
@@ -131,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -183,41 +165,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n"
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
+      "DAY CER:  0.324744257865277\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n",
+      "DAY CER:  0.365661252900232\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n",
+      "DAY CER:  0.5122681029323758\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n",
+      "DAY CER:  0.5969099824220557\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n",
+      "DAY CER:  0.7731490072369642\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/torch/functional.py:504: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at ../aten/src/ATen/native/TensorShape.cpp:3190.)\n",
-      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n",
-      "/home3/ebrahim2/neural_seq_decoder/src/neural_decoder/augmentations.py:170: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at ../aten/src/ATen/native/Convolution.cpp:895.)\n",
-      "  return self.conv(input, weight=self.weight, groups=self.groups, padding=\"same\")\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n            model.eval()\\n            day_edit_distance = day_seq_length = 0\\n\\n            with torch.no_grad():\\n                \\n                for i, (X, y, X_len, y_len, _) in enumerate(data_loader):\\n                    \\n                    X, y, X_len, y_len = map(lambda x: x.to(device), [X, y, X_len, y_len])\\n                    \\n                    dayIdx = torch.tensor([ve], dtype=torch.int64).to(device)\\n                    pred = model(X, X_len, dayIdx)\\n                    adjustedLens = model.compute_length(X_len)\\n                \\n                    if i < len(val_ds):\\n            \\n                        for idx in range(pred.shape[0]):\\n                            trueSeq = y[idx][:y_len[idx]].cpu().numpy()\\n                            decoded = decode_sequence(pred[idx], adjustedLens[idx])\\n                            dist = SequenceMatcher(a=trueSeq.tolist(), b=decoded.tolist()).distance()\\n\\n                            total_edit_distance += dist\\n                            total_seq_length += len(trueSeq)\\n                            day_edit_distance += dist\\n                            day_seq_length += len(trueSeq)\\n                            \\n                    else: \\n                    \\n                        for idx in range(pred.shape[0]):\\n                            \\n                            decoded = decode_sequence(pred[idx], adjustedLens[idx])\\n                            \\n                            transcript = loadedData[partition][i][\"transcriptions\"][j].strip()\\n                            transcript = re.sub(r\"[^a-zA-Z\\\\- \\']\", \"\", transcript).replace(\"--\", \"\").lower()\\n\\n                            model_outputs[\"logits\"].append(pred[idx].cpu().numpy())\\n                            model_outputs[\"logitLengths\"].append(adjustedLens[idx].item())\\n                            model_outputs[\"trueSeqs\"].append(y[idx][:y_len[idx]].cpu().numpy())\\n                            model_outputs[\"transcriptions\"].append(transcript)\\n                        \\n\\n\\n\\n        if run_lm:\\n            print(\"Running LM decoding...\")\\n            nbest_outputs = []\\n            for logits in model_outputs[\"logits\"]:\\n                logits = np.concatenate([logits[:, 1:], logits[:, 0:1]], axis=-1)\\n                logits = lmDecoderUtils.rearrange_speech_logits(logits[None, :, :], has_sil=True)\\n                decoded = lmDecoderUtils.lm_decode(ngramDecoder, logits[0], blankPenalty=blank_penalty,\\n                                                   returnNBest=return_n_best, rescore=rescore)\\n                nbest_outputs.append(decoded)\\n\\n            model_outputs[\"transcriptions\"] = [convert_sentence(t.strip()) for t in model_outputs[\"transcriptions\"]]\\n            nbest_outputs = [t.strip() for t in nbest_outputs]\\n            cer, wer = _cer_and_wer(nbest_outputs, model_outputs[\"transcriptions\"],\\n                                    outputType=\\'speech\\', returnCI=True)\\n            total_wer_dict[seed] = wer\\n\\n           \\n    if val_save_file:\\n        print(f\"SAVING VAL RESULTS FOR {model_name_str}\")\\n        with open(f\"{saveFolder_data}{model_name_str}_{val_save_file}.pkl\", \"wb\") as f:\\n            pickle.dump(day_cer_dict, f)\\n'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     },
     {
-     "ename": "SystemExit",
+     "ename": "",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3558: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
