--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -74,7 +74,25 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RUNNING IN N-GRAM MODE\n",
+      "loaded LM\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
+      "I0531 10:50:09.878487 2457693 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
+      "I0531 10:52:47.603737 2457693 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+     ]
+    }
+   ],
    "source": [
     "base_dir = \"/home3/skaasyap/willett\"\n",
     "\n",
