--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -46,8 +46,8 @@
     "import copy\n",
     "from torch.utils.data import ConcatDataset\n",
     "from loss import memo_loss_from_logits, forward_ctc\n",
-    "from g2p_en import G2p\n",
-    "g2p = G2p()  # <- Global instance\n",
+    "\n",
+    "\n",
     "import wandb\n",
     "import math\n",
     "\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +83,7 @@
      "output_type": "stream",
      "text": [
       "RUNNING IN N-GRAM MODE\n",
-      "loaded LM\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0604 19:40:12.798086 2736276 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0604 19:42:51.371131 2736276 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "Already loaded LM\n"
      ]
     }
    ],
@@ -136,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +139,7 @@
     }
    ],
    "source": [
-    "models_to_run = ['neurips_transformer_time_masked_held_out_days_1']\n",
+    "models_to_run = ['neurips_transformer_time_masked_held_out_days_2']\n",
     "\n",
     "shared_output_file = 'scratch'\n",
     "val_save_file = 'per_scratch'\n",
@@ -163,7 +154,7 @@
     "evaluate_comp = True\n",
     "run_lm = True\n",
     "\n",
-    "tta = True\n",
+    "tta = False\n",
     "\n",
     "tta_epochs = 1\n",
     "memo_augs = 16\n",
@@ -184,18 +175,41 @@
     "blank_id = 0\n",
     "\n",
     "num_classes = 41\n",
-    "gamma = 4"
+    "gamma = 4\n",
+    "\n",
+    "memo_args = {\n",
+    "    'learning_rate': [3e-5, 6e-5, 6e-5], \n",
+    "    'nptl_augs': 0, \n",
+    "    'nptl_aug_params': [0.2, 0.5], \n",
+    "    'tta_epochs': 1, \n",
+    "    'memo_augs': [16], \n",
+    "    'max_mask_pct': 0, \n",
+    "    'num_masks': 0\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TTA MODE:  False\n"
+     ]
+    }
+   ],
    "source": [
     "# CORP hyperparameters\n",
+    "baseline_args = {\n",
+    "    'dropout': 0, \n",
+    "    'input_dropout': 0\n",
+    "}\n",
+    "\n",
     "corp_args = {\n",
-    "    'learning_rate': 0.004, \n",
+    "    'learning_rate': [0.004], \n",
     "    'min_gradient_steps': 10, \n",
     "    'max_gradient_steps': 10,\n",
     "    'percentage_new_data': 0.6, \n",
@@ -206,33 +220,42 @@
     "    'l2_decay': 1e-5\n",
     "}\n",
     "\n",
-    "tta_method = 'corp'\n",
-    "\n",
-    "if tta_method == 'corp':\n",
-    "    tta_args = corp_args"
+    "print(\"TTA MODE: \", tta)\n",
+    "updated_args = baseline_args"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def reverse_dataset(dataset):\n",
+    "    return Subset(dataset, list(reversed(range(len(dataset)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_1_seed_0\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
       "day  0\n",
-      "DAY CER:  0.18964061180444777\n",
+      "DAY CER:  0.2449334105385061\n",
       "day  1\n",
-      "DAY CER:  0.2019130796423373\n",
+      "DAY CER:  0.31359628770301623\n",
       "day  2\n",
-      "DAY CER:  0.2687018701870187\n",
+      "DAY CER:  0.5109002308284175\n",
       "day  3\n",
-      "DAY CER:  0.31183115338882283\n",
+      "DAY CER:  0.553150152650569\n",
       "day  4\n",
-      "DAY CER:  0.3707845687039445\n",
-      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_1\n"
+      "DAY CER:  0.5969567637780664\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n"
      ]
     }
    ],
@@ -261,7 +284,7 @@
     "        model = BiT_Phoneme(\n",
     "        patch_size=args['patch_size'], dim=args['dim'], dim_head=args['dim_head'],\n",
     "        nClasses=args['nClasses'], depth=args['depth'], heads=args['heads'],\n",
-    "        mlp_dim_ratio=args['mlp_dim_ratio'], dropout=tta_args['dropout'], input_dropout=tta_args['input_dropout'],\n",
+    "        mlp_dim_ratio=args['mlp_dim_ratio'], dropout=updated_args['dropout'], input_dropout=updated_args['input_dropout'],\n",
     "        look_ahead=args['look_ahead'], gaussianSmoothWidth=args['gaussianSmoothWidth'],\n",
     "        T5_style_pos=args['T5_style_pos'], max_mask_pct=max_mask_pct,\n",
     "        num_masks=num_masks, mask_token_zeros=args['mask_token_zero'], max_mask_channels=0,\n",
@@ -276,7 +299,8 @@
     "        model.load_state_dict(torch.load(f\"{modelPath}/modelWeights\", map_location=device), strict=True)\n",
     "        model.eval()\n",
     "\n",
-    "        optimizer = torch.optim.AdamW(model.parameters(), lr=tta_args['learning_rate'], weight_decay=tta_args['l2_decay'],\n",
+    "        if tta:\n",
+    "            optimizer = torch.optim.AdamW(model.parameters(), lr=updated_args['learning_rate'], weight_decay=updated_args['l2_decay'],\n",
     "                                      betas=(args['beta1'], args['beta2']))\n",
     "\n",
     "        for name, p in model.named_parameters():\n",
@@ -308,12 +332,15 @@
     "            for trial_idx, (X, y, X_len, y_len, _) in enumerate(data_loader):\n",
     "                            \n",
     "                total_start = time.time()\n",
+    "                \n",
+    "                decoded = None\n",
     "\n",
     "                X, y, X_len, y_len = map(lambda x: x.to(device), [X, y, X_len, y_len])\n",
     "                dayIdx = torch.tensor([ve], dtype=torch.int64).to(device)\n",
     "                adjusted_len = model.compute_length(X_len)\n",
     "                \n",
     "                if tta:\n",
+    "                    print(\"PERFORMING TTA\")\n",
     "                \n",
     "                    model.train()\n",
     "                    memo_loss = li_loss = torch.tensor(0.0, device=device)\n",
@@ -363,14 +390,39 @@
     "                    model.eval()\n",
     "                    logits = model(X, X_len, ve, 0, 0, [0,0])\n",
     "                    \n",
-    "\n",
+    "                    if use_lm: \n",
+    "                        \n",
+    "                        # prepare logits for n-gram language model decoding \n",
+    "                        logits_np = logits.detach().cpu().numpy()\n",
+    "                        logits_np = np.concatenate([\n",
+    "                            logits_np[:, :, 1:],   # classes 1 to C-1\n",
+    "                            logits_np[:, :, 0:1]   # class 0, preserved in its own dimension\n",
+    "                        ], axis=-1)\n",
+    "                        \n",
+    "                        logits_np = lmDecoderUtils.rearrange_speech_logits(logits_np, has_sil=True)\n",
+    "                        \n",
+    "                        # obtain sentence from n-gram language model \n",
+    "                        decoded = lmDecoderUtils.lm_decode(\n",
+    "                            ngramDecoder, logits_np[0],\n",
+    "                            blankPenalty=blank_penalty,\n",
+    "                            returnNBest=return_n_best, rescore=rescore\n",
+    "                        )\n",
+    "                        \n",
+    "                        decoded = clean_transcription(decoded)\n",
+    "                        \n",
+    "                        decoded, _ = get_phonemes(decoded)\n",
+    "                    \n",
+    "            \n",
     "                model.eval()\n",
     "                \n",
     "                # get validation performance \n",
     "                if trial_idx < len(val_ds):\n",
     "                    for idx in range(logits[0:1].shape[0]):\n",
     "                        trueSeq = y[idx][:y_len[idx]].cpu().numpy()\n",
-    "                        decoded = decode_sequence(logits[idx], adjusted_len[idx])\n",
+    "                        \n",
+    "                        if decoded is None:\n",
+    "                            decoded = decode_sequence(logits[idx], adjusted_len[idx])\n",
+    "                            \n",
     "                        dist = SequenceMatcher(a=trueSeq.tolist(), b=decoded.tolist()).distance()\n",
     "\n",
     "                        total_edit_distance += dist\n",
