--- a/src/neural_decoder/n_gram_lm_cort.ipynb
+++ b/src/neural_decoder/n_gram_lm_cort.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home3/ebrahim2/miniconda3/envs/speech-bci/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +83,7 @@
      "output_type": "stream",
      "text": [
       "RUNNING IN N-GRAM MODE\n",
-      "loaded LM\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before InitGoogleLogging() is written to STDERR\n",
-      "I0609 15:09:06.966578 3199693 brain_speech_decoder.h:52] Reading fst /home3/skaasyap/willett/lm/languageModel/TLG.fst\n",
-      "I0609 15:11:36.713920 3199693 brain_speech_decoder.h:81] Reading symbol table /home3/skaasyap/willett/lm/languageModel/words.txt\n"
+      "Already loaded LM\n"
      ]
     }
    ],
@@ -136,18 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "USING COMBINED ARGS\n",
-      "64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models_to_run = ['neurips_transformer_time_masked_held_out_days_2', \n",
     "                 'neurips_transformer_time_masked_held_out_days_1',\n",
@@ -169,7 +151,6 @@
     "blank_id = 0\n",
     "num_classes = 41\n",
     "\n",
-    "tta_mode = 'combined'\n",
     "\n",
     "# no tta\n",
     "baseline_args = {\n",
@@ -195,25 +176,8 @@
     "    'WN+BS': False,\n",
     "}\n",
     "\n",
-    "# corp\n",
     "corp_args = {\n",
-    "    'learning_rate': [1e-3, 1e-3, 6e-5], \n",
-    "    'adaptation_steps': 4,\n",
-    "    'WN+BS': False,\n",
-    "    'white_noise': 0.2,\n",
-    "    'baseline_shift': 0,\n",
-    "    'dropout': 0.35, \n",
-    "    'input_dropout': 0.2, \n",
-    "    'l2_decay': 1e-5, \n",
-    "    'TM_augs': 0,\n",
-    "    'max_mask_pct': 0.075, \n",
-    "    'num_masks': 20, \n",
-    "    'loss_threshold': 2.0\n",
-    "}\n",
-    "\n",
-    "\n",
-    "combined_args = {\n",
-    "    'learning_rate': [1e-5, 1e-4, 1e-3], \n",
+    "    'learning_rate': [1e-5, 1e-3, 1e-3], \n",
     "    'adaptation_steps': 1,\n",
     "    'WN+BS': True,\n",
     "    'white_noise': 0.2,\n",
@@ -221,34 +185,28 @@
     "    'dropout': 0.35, \n",
     "    'input_dropout': 0.2, \n",
     "    'l2_decay': 1e-5, \n",
-    "    'TM_augs': 32,\n",
-    "    'max_mask_pct': 0.075, \n",
+    "    'TM_augs': 64,\n",
+    "    'max_mask_pct': 0.05, \n",
     "    'num_masks': 20, \n",
-    "    'temperature': 1, \n",
-    "    'cort_coef': 0, \n",
-    "    'corp_coef': 1\n",
+    "    'freeze_patch': True\n",
     "}\n",
     "\n",
-    "if tta_mode == 'cort':\n",
-    "    updated_args = cort_args\n",
-    "elif tta_mode == 'corp':\n",
+    "\n",
+    "tta_mode = 'corp'\n",
+    "\n",
+    "if tta_mode == 'corp':\n",
     "    updated_args = corp_args  \n",
-    "elif tta_mode == 'combined':\n",
-    "    print(\"USING COMBINED ARGS\")\n",
-    "    updated_args = combined_args \n",
     "else:\n",
     "    updated_args = baseline_args\n",
     "\n",
-    "skip_models = ['neurips_transformer_time_masked_held_out_days_2', \n",
-    "               'neurips_transformer_time_masked_held_out_days_1']\n",
-    "skip_seeds = [1,2,3]\n",
-    "\n",
-    "print(updated_args['TM_augs'])"
+    "skip_models = ['neurips_transformer_time_masked_held_out_days_1', \n",
+    "               'neurips_transformer_time_masked_held_out_days']\n",
+    "skip_seeds = [1,2,3]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,26 +237,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
-      "0.001\n",
+      "Running model: neurips_transformer_time_masked_held_out_days_2_seed_0\n",
+      "1e-05\n",
       "day  0\n",
-      "DAY WER:  0.21561338289962825\n",
+      "DAY WER:  0.4137044967880086\n",
       "day  1\n",
-      "DAY WER:  0.22243418542541016\n",
+      "DAY WER:  0.48501026694045174\n",
       "day  2\n",
-      "DAY WER:  0.21574452283698478\n",
+      "DAY WER:  0.9747211895910781\n",
       "day  3\n",
-      "DAY WER:  0.2395128552097429\n",
+      "DAY WER:  1.0\n",
       "day  4\n",
-      "DAY WER:  0.22422561257512713\n",
-      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days\n"
+      "DAY WER:  1.0\n",
+      "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days_2\n"
      ]
     }
    ],
@@ -352,12 +310,13 @@
     "                                          weight_decay=updated_args['l2_decay'],\n",
     "                                            betas=(args['beta1'], args['beta2']))\n",
     "\n",
-    "        for name, p in model.named_parameters():\n",
-    "            p.requires_grad = name in {\n",
-    "                \"to_patch_embedding.1.weight\", \"to_patch_embedding.1.bias\",\n",
-    "                \"to_patch_embedding.2.weight\", \"to_patch_embedding.2.bias\",\n",
-    "                \"to_patch_embedding.3.weight\", \"to_patch_embedding.3.bias\"\n",
-    "            }\n",
+    "        if updated_args['freeze_patch']:\n",
+    "            for name, p in model.named_parameters():\n",
+    "                p.requires_grad = name in {\n",
+    "                    \"to_patch_embedding.1.weight\", \"to_patch_embedding.1.bias\",\n",
+    "                    \"to_patch_embedding.2.weight\", \"to_patch_embedding.2.bias\",\n",
+    "                    \"to_patch_embedding.3.weight\", \"to_patch_embedding.3.bias\"\n",
+    "                }\n",
     "\n",
     "        testDayIdxs = np.arange(5)\n",
     "        valDayIdxs = [0, 1, 3, 4, 5] if mn == 2 else [0, 1, 2, 3, 4]\n",
@@ -397,29 +356,30 @@
     "                logits_eval = model(X, X_len, ve, 0, 0, [0,0])\n",
     "                decoded, y_pseudo, y_len_pseudo = get_lm_outputs(logits_eval)\n",
     "                \n",
-    "                if updated_args['TM_augs'] > 0:\n",
-    "                    # repeat # of aug times\n",
-    "                    adjusted_len_repeat = adjusted_len.unsqueeze(0).repeat(updated_args['TM_augs'], 1)\n",
-    "                    y_pseudo = y_pseudo.unsqueeze(0).repeat(updated_args['TM_augs'], 1).to(device)\n",
-    "                    y_len_pseudo = y_len_pseudo.unsqueeze(0).repeat(updated_args['TM_augs'], 1).to(device)\n",
     "                    \n",
     "                if tta_mode != 'baseline':\n",
-    "                                    \n",
+    "                    \n",
+    "                    if updated_args['TM_augs'] > 0:\n",
+    "                        # repeat # of aug times\n",
+    "                        adjusted_len_repeat = adjusted_len.unsqueeze(0).repeat(updated_args['TM_augs'], 1)\n",
+    "                        y_pseudo = y_pseudo.unsqueeze(0).repeat(updated_args['TM_augs'], 1).to(device)\n",
+    "                        y_len_pseudo = y_len_pseudo.unsqueeze(0).repeat(updated_args['TM_augs'], 1).to(device)\n",
+    "                                        \n",
     "                    model.train()\n",
     "\n",
     "                    for _ in range(updated_args['adaptation_steps']):\n",
     "                \n",
     "                        # (augs + 1 x T x C), first sample is not augmented \n",
     "                        logits = model(X, X_len, ve, updated_args['TM_augs'], 0, [0,0])\n",
-    "                    \n",
-    "                        cort_loss = memo_loss_from_logits(logits, adjusted_len, blank_id, updated_args['temperature'])\n",
+    "                            \n",
+    "                        #cort_loss = memo_loss_from_logits(logits, adjusted_len, blank_id, updated_args['temperature'])\n",
     "            \n",
     "                        corp_loss = forward_ctc(logits, adjusted_len_repeat, y_pseudo, y_len_pseudo)\n",
     "                        \n",
-    "                        loss = updated_args['cort_coef']*cort_loss + updated_args['corp_coef']*corp_loss\n",
-    "                \n",
+    "                        #loss = updated_args['cort_coef']*cort_loss + updated_args['corp_coef']*corp_loss\n",
+    "                        \n",
     "                        optimizer.zero_grad()\n",
-    "                        loss.backward()\n",
+    "                        corp_loss.backward()\n",
     "                        optimizer.step()\n",
     "    \n",
     "                model.eval()\n",
@@ -468,6 +428,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 63, 41])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logits.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -492,44 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
-    "0.001\n",
-    "day  0\n",
-    "DAY WER:  0.21561338289962825\n",
-    "day  1\n",
-    "DAY WER:  0.22243418542541016\n",
-    "day  2\n",
-    "DAY WER:  0.21574452283698478\n",
-    "day  3\n",
-    "DAY WER:  0.2395128552097429\n",
-    "day  4\n",
-    "DAY WER:  0.22422561257512713\n",
-    "\n",
-    "day  0\n",
-    "/home3/ebrahim2/neural_seq_decoder/src/neural_decoder/augmentations.py:170: UserWarning: Using padding='same' with even kernel lengths and odd dilation may require a zero-padded copy of the input be created (Triggered internally at ../aten/src/ATen/native/Convolution.cpp:895.)\n",
-    "  return self.conv(input, weight=self.weight, groups=self.groups, padding=\"same\")\n",
-    "DAY WER:  0.22490706319702602\n",
-    "day  1\n",
-    "DAY WER:  0.24532621136970623\n",
-    "day  2\n",
-    "DAY WER:  0.24507983661344226\n",
-    "day  3\n",
-    "DAY WER:  0.2584573748308525\n",
-    "day  4\n",
-    "DAY WER:  0.24687933425797504\n",
-    "SAVING VAL RESULTS FOR neurips_tran\n",
-    "\n",
-    "# CORP style TTA\n",
-    "day  0\n",
-    "DAY WER:  0.2278810408921933\n",
-    "day  1\n",
-    "DAY WER:  0.25791682563906904\n",
-    "day  2\n",
-    "DAY WER:  0.2577051615298923\n",
-    "day  3\n",
-    "DAY WER:  0.2823635543527289\n",
-    "day  4\n",
-    "DAY WER:  0.29496070272769304\n",
+    "##### Highest training data condition #####\n",
     "\n",
     "# No TTA results\n",
     "day  0\n",
@@ -543,34 +486,60 @@
     "day  4\n",
     "DAY WER:  0.31900138696255204\n",
     "\n",
-    "Running model: neurips_transformer_time_masked_held_out_days_seed_0\n",
-    "3e-05\n",
+    "\n",
+    "# modified CORP\n",
     "day  0\n",
-    "DAY WER:  0.2275092936802974\n",
+    "DAY WER:  0.21561338289962825\n",
     "day  1\n",
-    "DAY WER:  0.24837848149561237\n",
+    "DAY WER:  0.22243418542541016\n",
     "day  2\n",
-    "DAY WER:  0.27255848496101004\n",
+    "DAY WER:  0.21574452283698478\n",
     "day  3\n",
-    "DAY WER:  0.2877762742444745\n",
+    "DAY WER:  0.2395128552097429\n",
     "day  4\n",
-    "DAY WER:  0.3102172907998151\n",
-    "SAVING VAL RESULTS FOR neurips_transformer_time_masked_held_out_days\n",
+    "DAY WER:  0.22422561257512713\n",
     "\n",
-    "# CORT results\n",
+    "\n",
+    "##### Medium training data condition #####\n",
+    "\n",
+    "# No TTA results\n",
     "day  0\n",
-    "DAY WER:  0.2278810408921933\n",
+    "DAY WER:  0.22477064220183487\n",
     "day  1\n",
-    "DAY WER:  0.26516596718809615\n",
+    "DAY WER:  0.2594104308390023\n",
     "day  2\n",
-    "DAY WER:  0.2707018195321203\n",
+    "DAY WER:  0.36125868410298323\n",
     "day  3\n",
-    "DAY WER:  0.3085250338294993\n",
+    "DAY WER:  0.4338896020539153\n",
     "day  4\n",
-    "DAY WER:  0.32547387887193713\n",
+    "DAY WER:  0.5392376681614349\n",
     "\n",
     "\n",
-    "\n"
+    "# modified CORP \n",
+    "day  0\n",
+    "DAY WER:  0.22768974145120935\n",
+    "day  1\n",
+    "DAY WER:  0.2494331065759637\n",
+    "day  2\n",
+    "DAY WER:  0.31426236207601144\n",
+    "day  3\n",
+    "DAY WER:  0.31664527171587503\n",
+    "day  4\n",
+    "DAY WER:  0.32772795216741407\n",
+    "\n",
+    "##### Low training data condition #####\n",
+    "\n",
+    "# no TTA\n",
+    "day  0\n",
+    "DAY WER:  0.41413276231263385\n",
+    "day  1\n",
+    "DAY WER:  0.508829568788501\n",
+    "day  2\n",
+    "DAY WER:  0.7594795539033458\n",
+    "day  3\n",
+    "DAY WER:  0.7954545454545454\n",
+    "day  4\n",
+    "DAY WER:  0.8411253620190319\n"
    ]
   },
   {
