--- a/notebooks/formatCompetitionData.ipynb
+++ b/notebooks/formatCompetitionData.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4316910d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/willett_data/competitionData/ /data/willett_data/ptDecoder_ctc_both\n"
+     ]
+    }
+   ],
    "source": [
     "server = 'obi'\n",
     "logBoth = True\n",
@@ -29,10 +37,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d1f89411",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+      "[nltk_data]     /home3/ebrahim2/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "nltk.download('averaged_perceptron_tagger_eng')"
@@ -40,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "79569a03",
    "metadata": {},
    "outputs": [],
@@ -81,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0b6cc836",
    "metadata": {},
    "outputs": [],
@@ -96,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "edb2175e",
    "metadata": {},
    "outputs": [],
@@ -124,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e6305c7d",
    "metadata": {},
    "outputs": [],
@@ -184,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "20398fe1",
    "metadata": {},
    "outputs": [],
@@ -251,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1cf55fa2",
    "metadata": {},
    "outputs": [],
@@ -515,17 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ee1dfcd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "165+50"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6bc86d8c",
    "metadata": {},
    "outputs": [],
@@ -553,10 +572,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "87c7d480",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7, 8, 9, 10, 12, 13, 14, 15, 16, 18, 19, 20]\n",
+      "t12.2022.05.24\n",
+      "t12.2022.05.26\n",
+      "t12.2022.06.02\n",
+      "t12.2022.06.07\n",
+      "t12.2022.06.14\n",
+      "t12.2022.06.16\n",
+      "t12.2022.06.21\n",
+      "t12.2022.06.28\n",
+      "t12.2022.07.05\n",
+      "t12.2022.07.14\n",
+      "t12.2022.07.21\n",
+      "t12.2022.07.27\n",
+      "t12.2022.08.02\n",
+      "t12.2022.08.11\n",
+      "t12.2022.08.13\n"
+     ]
+    }
+   ],
    "source": [
     "competitionDays = []\n",
     "for dayIdx in range(len(sessionNames)):\n",
@@ -570,26 +612,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "adb4351e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['t12.2022.04.28',\n",
+       " 't12.2022.05.05',\n",
+       " 't12.2022.05.17',\n",
+       " 't12.2022.05.19',\n",
+       " 't12.2022.05.24',\n",
+       " 't12.2022.05.26',\n",
+       " 't12.2022.06.02',\n",
+       " 't12.2022.06.07',\n",
+       " 't12.2022.06.14',\n",
+       " 't12.2022.06.16',\n",
+       " 't12.2022.06.21',\n",
+       " 't12.2022.06.23',\n",
+       " 't12.2022.06.28',\n",
+       " 't12.2022.07.05',\n",
+       " 't12.2022.07.14',\n",
+       " 't12.2022.07.21',\n",
+       " 't12.2022.07.27',\n",
+       " 't12.2022.07.29',\n",
+       " 't12.2022.08.02',\n",
+       " 't12.2022.08.11',\n",
+       " 't12.2022.08.13',\n",
+       " 't12.2022.08.18',\n",
+       " 't12.2022.08.23',\n",
+       " 't12.2022.08.25']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sessionNames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "41cb63b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TRAIN t12.2022.04.28\n",
+      "TRAIN t12.2022.05.05\n",
+      "TRAIN t12.2022.05.17\n",
+      "TRAIN t12.2022.05.19\n",
+      "EVAL t12.2022.05.24\n",
+      "EVAL t12.2022.05.26\n",
+      "EVAL t12.2022.06.02\n",
+      "EVAL t12.2022.06.07\n",
+      "EVAL t12.2022.06.14\n",
+      "TRAIN t12.2022.08.18\n",
+      "TRAIN t12.2022.08.23\n",
+      "TRAIN t12.2022.08.25\n"
+     ]
+    }
+   ],
    "source": [
     "trainDatasets = []\n",
     "testDatasets = []\n",
     "competitionDatasets = []\n",
     "\n",
-    "held_out_run_set = 0\n",
+    "held_out_run_set = 2\n",
     "\n",
     "if held_out_run_set == 0:\n",
     "\n",
@@ -605,14 +700,17 @@
     "    \n",
     "    evaluation_days = ['05.24', '05.26', '06.02', '06.07', '06.14']\n",
     "    loop_until = -15\n",
+    "    extra_training_days = [-3, -2, -1] # add silent speech days\n",
     "\n",
     "\n",
     "# skipping the last 3 days because they are not historical data. \n",
     "for dayIdx in range(len(sessionNames[:loop_until])):\n",
     "    \n",
     "    if sessionNames[dayIdx][-5:] in evaluation_days:\n",
+    "\n",
+    "        print(\"EVAL\", sessionNames[dayIdx])\n",
     "        \n",
-    "        print(f\"Placing {sessionNames[dayIdx]} in test/comp\")\n",
+    "        #print(f\"Placing {sessionNames[dayIdx]} in test/comp\")\n",
     "        \n",
     "        # put both train and test data for held-out days into \"test (really val)\".\n",
     "        testDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
@@ -627,7 +725,19 @@
     "            \n",
     "    else:\n",
     "        \n",
+    "        print(\"TRAIN\", sessionNames[dayIdx])\n",
+    "        \n",
     "        # put both train and test data for non held-out days into train\n",
+    "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
+    "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
+    "        trainDatasets.append(trainDataset)\n",
+    "        \n",
+    "if held_out_run_set == 2:\n",
+    "    \n",
+    "    for dayIdx in extra_training_days:\n",
+    "        print(\"TRAIN\", sessionNames[dayIdx])\n",
+    "        \n",
     "        trainDataset1 = getDataset(dataDir + '/train/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        trainDataset2 = getDataset(dataDir + '/test/' + sessionNames[dayIdx] + '.mat', logBoth)\n",
     "        trainDataset = combine_dicts(trainDataset1, trainDataset2)\n",
@@ -636,10 +746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "2da5be87",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max day held out 0  14\n",
+      "max day held out 1  9\n",
+      "max day held out 2  3\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"max day held out 0 \", 24 - 3 - 6 - 1)\n",
     "print(\"max day held out 1 \", 24 -9 - 5 - 1)\n",
@@ -662,7 +782,7 @@
     "print(held_out_run_set)\n",
     "print(dataSave)\n",
     "if held_out_run_set > 0:\n",
-    "    dataSave_held_out_days = f\"{dataSave}_held_out_days_{held_out_run_set}\"\n",
+    "    dataSave_held_out_days = f\"{dataSave}_held_out_days_{held_out_run_set}_sil\"\n",
     "else:\n",
     "    dataSave_held_out_days = f\"{dataSave}_held_out_days\"\n",
     "    \n",
